# omsp-modbus

./: pyproject.toml
omsp_modbus/: __init__.py  server.py  streamer.py
