[tool.poetry]
name = "omsp-modbus"
version = "0.1.0"
description = ""
authors = ["Brian McClune <bpmcclune@gmail.com>"]
readme = "README.md"
packages = [{include = "omsp_modbus"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
