[tool.poetry]
name = "omsp-modbus"
version = "0.1.0"
description = ""
authors = ["Brian McClune <bpmcclune@gmail.com>"]
readme = "README.md"
packages = [{include = "omsp_modbus"}]

[tool.poetry.dependencies]
python = "^3.9"
crcmod = "1.7"
pymodbus = {version = "3.0.0dev4", allow-prereleases = true, extras = ["serial"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
